--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       h1 {
         color: white;
         font-family: "Bungee Outline", display;
-        font-size: 15vh;
+        font-size: calc(5vw + 5vh + 5vmin);
         margin: 0;
         text-align: center;
       }
@@ -53,7 +53,11 @@
   </head>
   <body>
     <main>
-      <h1>Crashbox Labs</h1>
+      <h1>
+        Crashbox
+        <br />
+        Labs
+      </h1>
     </main>
   </body>
 </html>
